# slicing-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
src/: byte_slice.rs  index.rs  lib.rs  slices.rs
src/abstra/: mod.rs
src/bool_array/set/: mod.rs
src/bool_flag/: mod.rs
src/bool_slice/: mod.rs
src/bool_slice/set/: mod.rs
src/byte_slice/: mod.rs
src/hash/set/: mod.rs
src/index/: mod.rs
src/set/: mod.rs
src/slices/: mod.rs  tests.rs
test_crates/: README.md
test_crates/slicing_any_std/: Cargo.toml
test_crates/slicing_any_std/src/slices/: mod.rs
test_crates/slicing_any_std_test/: Cargo.toml
test_crates/slicing_any_std_test/src/: lib.rs  slices.rs
test_crates/slicing_no_std_bare_build/: Cargo.toml
test_crates/slicing_no_std_bare_build/.cargo/: config.toml
test_crates/slicing_no_std_bare_build/src/: main.rs
test_crates/slicing_no_std_bare_run/: Cargo.toml
test_crates/slicing_no_std_bare_test/: Cargo.toml  README.md
test_crates/slicing_no_std_bare_test/src/slices/: mod.rs
test_crates/slicing_no_std_basic_build/: Cargo.toml
test_crates/slicing_no_std_basic_compile/: README.md
test_crates/slicing_no_std_basic_compile/src/: main.rs
test_crates/slicing_no_std_basic_run/: Cargo.toml
test_crates/slicing_no_std_heap_build/: Cargo.toml
test_crates/slicing_no_std_heap_build/.cargo/: config.toml
test_crates/slicing_no_std_heap_build/src/: main.rs
test_crates/slicing_no_std_heap_run/: Cargo.toml
test_crates/slicing_no_std_heap_test/: Cargo.toml
test_crates/slicing_no_std_heap_test/src/slices/: mod.rs
test_crates/slicing_no_std_vec_build/: Cargo.toml
test_crates/slicing_no_std_vec_compile/: Cargo.toml
test_crates/slicing_no_std_vec_compile/.cargo/: config.toml
test_crates/slicing_no_std_vec_compile/src/: main.rs
test_crates/slicing_no_std_vec_emulate/: Cargo.toml
test_crates/slicing_no_std_vec_run/: Cargo.toml
test_crates/slicing_ok_std/src/slices/: mod.rs
test_crates/slicing_ok_std_test/: Cargo.toml
test_crates/slicing_ok_std_test/src/: slices.rs
tests/: README.md
tests/any_std/: Cargo.toml
tests/any_std/src/: lib.rs
tests/any_std/src/bool_slice/set/: mod.rs
tests/any_std/src/slices/: mod.rs
tests/no_std/: Cargo.toml
tests/no_std/src/: lib.rs
tests/no_std_basic_compile/: Cargo.toml  README.md
tests/no_std_basic_compile/src/: main.rs
tests/no_std_basic_emulate/: Cargo.toml
tests/no_std_box_compile/: Cargo.toml
tests/no_std_box_compile/.cargo/: config.toml
tests/no_std_box_compile/src/: main.rs
tests/no_std_build_only/: Cargo.toml  README.md
tests/no_std_build_only/src/: main.rs
tests/no_std_compile/: Cargo.toml  README.md
tests/no_std_compile/src/: main.rs
tests/no_std_emulate/: Cargo.toml
tests/no_std_emulate/src/slices/: mod.rs
tests/no_std_vec_compile/: Cargo.toml
tests/no_std_vec_compile/src/: main.rs
tests/ok_std/: Cargo.toml
tests/ok_std/src/: lib.rs
tests/ok_std/src/slices/: mod.rs
tests/slicing_any_std/src/bool_slice/set/: mod.rs
tests/slicing_any_std/src/slices/: mod.rs
tests/slicing_no_std_basic_compile/: Cargo.toml
tests/slicing_no_std_basic_emulate/: Cargo.toml
tests/slicing_no_std_basic_emulate/src/slices/: mod.rs
tests/slicing_no_std_vec_compile/: Cargo.toml
tests/slicing_no_std_vec_emulate/src/: lib.rs
tests/slicing_no_std_vec_emulate/src/slices/: mod.rs
tests/slicing_ok_st/: Cargo.toml
tests/with_std/: Cargo.toml
