[package]
name = "ranging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# std and no_std are mutually exclusive. Use maximum one of them.
std = []
no_std = []

# Whether array size `N` can be non-zero if, and only if, the client code is
# using `SliceStorage::Array` variant of that type (of `SliceStorage` with that
# non-zero value of generic param `N`).
size_for_array_only = []

# DO NOT enable the following "only for testing", because it gets forgotten... Use tests/ok_std/ instead.
## default = ["std"]

[dependencies]

# TODO reconsider the following. It could save build time.
#
# Do not have a test-based workspace. It upsets both
# - `cargo test --workspace` for tests/ok_std
#    (even though `cargo test --package ok_std` worked fine), and
# - Rust Analyzer for the root crate (ranging) itself.
#[workspace]
#members = ["tests/*"]
