[package]
name = "slicing_any_std_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The following features are used from neighbor test crates:
[features]
std = []
no_std = []
no_std_heap = []

[dependencies]
# Do not specify no_std/no_std + no_std_heap/std features. Instead, leave that
# for the crate that consumes this.
slicing = { path = "../.." }
# If you do add - features = ["std"] - here temporarily, do NOT commit that:
# ranging = { path = "../.." , features = ["std"]}
