[package]
name = "slicing_no_std_bare_build"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slicing = { path = "../..", features = ["no_std"]}
slicing_any_std_test = { path = "../slicing_any_std_test", features = ["no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
