[package]
name = "slicing_ok_std_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slicing = { path = "../..", features = ["std"] }
[dev-dependencies]
slicing_any_std_test = { path = "../slicing_any_std_test", features = ["std"] }
