[package]
name = "no_std_build_only"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ranging = { path = "../..", features = ["no_std"]}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"